--- a/public/admin/signin.html
+++ b/public/admin/signin.html
@@ -1,4 +1,4 @@
-<ad-title>Sign in - Admin</ad-title>
+<ad-title>Sign in</ad-title>
 
 <div class="panel" theme="light" accent="red">
     <img src="<#? appassets ?#>/icon_text.png"/>
