--- a/public/pins.html
+++ b/public/pins.html
@@ -18,7 +18,7 @@
 <script>
 
     $.ajax({
-        type: "post",
+        type: "get",
         url: "/courses/get",
         success: function(data)
         {
