--- a/public/admin/home.html
+++ b/public/admin/home.html
@@ -1,10 +1,10 @@
-<ad-title>Home</ad-title>
+<ad-title><$ home title /></ad-title>
 
 <style>
 </style>
 
 <div class="header">
-    <div class="title">Home</div>
+    <div class="title"><$ home title /></div>
 </div>
 
 <div class="content">
